AIAI-173 fix tests